@@ -1,3 +1,7 @@
+2002-03-23  Havoc Pennington  <hp@pobox.com>
+
+	* gconf/gconfd.c (gconf_main): change exit timeout to 2 minutes
+
 2002-03-14  Havoc Pennington  <hp@redhat.com>
 
 	* configure.in: 1.0.9
